加了个回到自己位置的功能

--- a/BaiduMap/res/layout/activity_chooseplace.xml
+++ b/BaiduMap/res/layout/activity_chooseplace.xml
@@ -24,6 +24,14 @@
             android:clickable="true" />
 
         <ImageView
+            android:id="@+id/locationimg"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/location" />
+
+        <ImageView
             android:id="@+id/mSelectimg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
